# robertwpearce.com

./: .envrc  .gitignore  .pre-commit-config.yaml  CNAME  Cargo.toml  Makefile  README.md  Slug.hs  announcing-react-medium-image-zoom-v4.html  asynchronously-loading-scripts.html  atom.xml  be-better.html  behaviour-and-your-team.html  behaviour-your-team.html  berlin.html  build-your-team-an-accessible-shareable-component-library.html  catch-low-hanging-accessibility-fruit-with-axe-core.html  chief.html  config.json  content-hashing-static-assets-to-break-caches-with-md5sum-and-bash.html  default.nix  delegate-dont-dump.html  derivation.nix  dev.js  devServer.js  elm-geocoding-and-darksky-pt-1-setup-elm-and-proxy-servers.html  elm-geocoding-and-darksky-pt-2-geocoding-an-address.html  elm-geocoding-and-darksky-pt-3-fetching-the-current-weather.html  elm-geocoding-and-darksky-pt-4-extracting-our-elm-code.html  elm-geocoding-darksky-pt-1-setup-elm-proxy-servers.html  elm-geocoding-darksky-pt-2-geocoding-an-address.html  elm-geocoding-darksky-pt-3-fetching-the-current-weather.html  elm-geocoding-darksky-pt-4-extracting-our-elm-code.html  exercising-in-transit.html  feed.xml  flake.nix  freelancing.html  hakyll-pt-1-setup-and-initial-customization.html  hakyll-pt-1-setup-initial-customization.html  hakyll-pt-2-generating-a-sitemap-xml-file.html  (+54 more)
.well-known/: brave-payments-verification.txt  keybase.txt
_site/: about.html  hire-me.html  index.html
css/: article.css  base.css  default.css  home.css  t-clean-home.css  t-clean-note.css  t-clean.css  t-code-dracula.css
docs/: announcing-react-medium-image-zoom-v4.html  asynchronously-loading-scripts.html  atom.xml  be-better.html  behaviour-and-your-team.html  berlin.html  build-your-team-an-accessible-shareable-component-library.html  catch-low-hanging-accessibility-fruit-with-axe-core.html  chief.html  dat.json  delegate-dont-dump.html  elm-geocoding-and-darksky-pt-1-setup-elm-and-proxy-servers.html  elm-geocoding-and-darksky-pt-2-geocoding-an-address.html  elm-geocoding-and-darksky-pt-3-fetching-the-current-weather.html  elm-geocoding-and-darksky-pt-4-extracting-our-elm-code.html  exercising-in-transit.html  freelancing.html  hakyll-pt-1-setup-and-initial-customization.html  hakyll-pt-2-generating-a-sitemap-xml-file.html  hakyll-pt-3-generating-rss-and-atom-xml-feeds.html  hakyll-pt-4-copying-static-files-for-your-build.html  hakyll-pt-5-generating-custom-post-filenames-from-a-title-slug.html  hakyll-pt-6-pure-builds-with-nix.html  immediate-functions.html  index.html  javascript-understand-array-prototype-map-by-reimplementing-it.html  javascript-writing-a-functional-programming-style-map-function.html  life-in-colorado.html  long-distance-movie-night.html  missing-those-we-love.html  mobile-device-etiquette.html  moving-to-london.html  node-js-geocoding-proxy-with-paperplane.html  on-working-remotely.html  ramda-chops-function-composition.html  ramda-chops-function-currying.html  ramda-chops-map-filter-and-reduce.html  ramda-chops-safely-accessing-properties.html  riotjs-example.html  rss.xml  (+10 more)
generator/: default.nix  hpkgs.nix  robertwpearce-com.cabal  shell.nix
generator/src/: Main.hs
js/: .eslintignore  .eslintrc.js  .prettierrc.js  index.js  index.ts  package-lock.json  package.json  tsconfig.json  tslint.json
lib/: blog.js  cname.js  css.js  fileUtils.js  fs-helpers.js  fs-task.js  html.js  images.js  layout.js  markdown.js  page.js  partial.js  perform.js  posts.js  sass.js  sitemap.js  utils.js  views.js  writePostsJSON.js
new-zealand/: bay-of-plenty.html  hawkes-bay.html  hawkes-bay.md  index.html  index.md  otago.md  queenstown-area.md  south-island-central-to-west-coast.html  south-island-central-to-west-coast.md  taupo.html  taupo.md  wanaka-area.md
nix/: default.nix  sources.json
old/: flake.nix
posts/: 2013-08-28-your-product-doesnt-judge-you.md  2014-09-01-moving-to-london.md  2014-09-03-working-in-london.md  2014-09-11-berlin.md  2014-09-23-chief.md  2014-09-29-exercising-in-transit.md  2014-10-15-working-remotely.md  2015-01-15-be-better.md  2015-01-19-use-bcc.md  2015-01-28-riotjs-example.md  2015-03-03-life-in-denver.md  2015-03-09-mobile-device-etiquette.md  2015-03-23-stop-saying-silicon-harbor.md  2015-06-04-switching-jobs.md  2015-09-21-delegate-dont-dump.md  2015-09-26-long-distance-movie-night.md  2015-10-05-asynchronously-loading-scripts.md  2015-10-06-immediate-functions.md  2015-10-13-simple-variadic-behavior.md  2015-10-14-freelancing.md  2016-02-02-missing-those-we-love.md  2016-02-22-a-new-leaf.md  2017-02-20-travel-ruminations.md  2017-06-02-behaviour-and-your-team.md  2017-06-22-geocoding-proxy-with-nodejs-paperplane.md  2017-07-22-elm-geocoding-and-darksky-pt-1.md  2017-07-30-elm-geocoding-and-darksky-pt-2.md  2017-08-18-elm-geocoding-and-darksky-pt-3.md  2017-12-16-elm-geocoding-and-darksky-pt-4.md  2018-01-23-ramda-chops-function-currying.md  2018-01-26-ramda-chops-function-composition.md  2018-01-31-ramda-chops-safely-accessing-properties.md  2018-02-08-ramda-chops-map-filter-reduce.md  2018-11-04-hakyll-pt-1.md  2018-11-17-hakyll-pt-2.md  2019-01-23-hakyll-pt-3.md  2019-01-27-hakyll-pt-4.md  2019-01-28-hakyll-pt-4.md  2019-03-16-hakyll-pt-5.md  2020-01-19-announcing-react-medium-image-zoom-v4.md  (+9 more)
src/: about.html  config.js  index.html  lib.rs  main.rs  (+3 more)
ssg/: ssg.cabal
ssg/src/: Main.hs
ssg/src/Hakyll/Site/: Configuration.hs  CustomFields.hs  Feed.hs  Rules.hs
(+406 files in other folders)
