cabal-version:       2.4

name:                robertwpearce-com
version:             0.1.0.2
synopsis:            💾 My personal site; built with hakyll
build-type:          Simple
homepage:            https://github.com/rpearce/robertwpearce.com
bug-reports:         https://github.com/rpearce/robertwpearce.com/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Robert Pearce
maintainer:          me@robertwpearce.com
extra-source-files:  README.md

executable site
  main-is:           site.hs
  build-depends:     base == 4.*
                   , hakyll ^>= 4.13.3.0
                   , pandoc >= 2.0.5 && < 2.10
                   , text ^>= 1.2.4
                   , time >= 1.8 && < 1.10
  other-modules:     Slug
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
