cabal-version:       2.4

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base >= 4.8
                   , hakyll >= 4.14
                   , containers >= 0.6.5.1
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , slugger >= 0.1.0.1
                   , tagsoup >= 0.14.8
                   , text >= 1 && < 1.3
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
