cabal-version:       3.6

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  default-language:  Haskell2010
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll == 4.15.*
                   , containers >= 0.6.5.1
                   , filepath >= 1.0
                   , pandoc >= 2.11
                   , pandoc-types >= 1.22
                   , slugger >= 0.1.0.2
                   , tagsoup >= 0.14.8
                   , text >= 1 && < 3
                   , time >= 1.8
                   , time-locale-compat >= 0.1
  other-modules:   Text.HTML.TagSoup.Compressor
  ghc-options:     -Wall
                   -Wcompat
                   -Widentities
                   -Wincomplete-record-updates
                   -Wincomplete-uni-patterns
                   -Wpartial-fields
                   -Wredundant-constraints
                   -O2
                   -threaded
                   -rtsopts
                   -with-rtsopts=-N
